# text-to-sql

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  spider_dataset_knowledge_base.md
src/: __init__.py  config.py  dataset_analysis.py
src/data/: create_dpo_dataset.py  generate_dpo_pairs.py  generate_predictions.py  preprocess.py
src/data/prompts/: __init__.py  templates.py
src/evaluation/: evaluate.py  evaluate_colab.py
src/inference/: api.py  app.py
src/training/: train.ipynb  train.py  train_dpo.py  train_qwen.py
