[project]
name = "text-to-sql"
version = "0.1.0"
description = "Fine-tuning LLMs for Text-to-SQL conversion using the Spider dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "sqlparse>=0.5.5",
    "transformers>=4.57.3",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "tqdm>=4.66.0",
]
